# helloworld

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake.yml  linux.yml  macos.yml  releases.yml  windows.yml
lib/: CMakeLists.txt  build_number.h.in  hello.cpp  hello.h
tests/: CMakeLists.txt  test_hello.cpp
